# betterasciinemaplayer

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-10-bettercast-plan.md  2026-04-10-bettercast-qol-features-plan.md
docs/superpowers/specs/: 2026-04-10-bettercast-design.md  2026-04-10-bettercast-qol-features-design.md
src/bettercast/: __main__.py  cli.py  engine.py  terminal.py
src/bettercast/formats/: base.py  v2.py  v3.py
src/bettercast/ui/: app.py  bookmarks.py  help.py  keyhints.py  progress.py  search.py  terminal.py  timestamp.py  toast.py
tests/: conftest.py  test_altscreen.py  test_app.py  test_cli.py  test_engine.py  test_integration.py  test_overlays.py  test_parser.py  test_progress.py  test_screenshots.py  test_terminal.py
tests/fixtures/: idle_gaps.cast  sample.cast  sample_v3.cast
