[project]
name = "bettercast"
version = "0.1.0"
description = "A better asciinema player for the terminal"
requires-python = ">=3.12"
dependencies = [
    "textual>=3.0",
    "pyte>=0.8",
    "click>=8.0",
]

[project.scripts]
bettercast = "bettercast.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bettercast"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
